--- a/users/email_templates/reset.html
+++ b/users/email_templates/reset.html
@@ -9,7 +9,7 @@
         <p>In order to reset password, please 
         click on the link below to verify your account</p> 
         <a style="margin-top:1rem; padding: 1rem; border-radius: 0.5rem; font-size: 1rem; text-decoration: none; background: #0275d8; color: white;"
-            href="http://localhost:8000/api/v1/users/reset/form?token={token}">
+            href="http://localhost:8000/api/v1/users/reset/new_password?access_token={token}">
             Reset your password
         </a>
         <p style="margin-top:1rem;">If you did not register for DMaryanskiy's ToDo List, 
